##########################
# Setup.py Configuration #
##########################
# Configuring setup()
[metadata]
name = nonadditivity_az
version = 1.0.0
description = An extension of the nonadditivity analysis from Kramer (2019)
long_description = file: README.md
long_description_content_type = text/markdown

[options]
install_requires =
    # Scientific python stack
    scipy
    numpy
    pandas
    # Plotting
    matplotlib
    seaborn
    # Cheminformatics tools
    mmpdb
    nonadditivity
    chembl_downloader

zip_safe = false
include_package_data = True
python_requires = >=3.6

# Where is my code
packages = find:
package_dir =
    = src

[options.packages.find]
where = src

[options.extras_require]
rdkit =
    rdkit-pypi
